2018-12-10  Ben Elliston  <bje@gnu.org>

	* lib/utils.exp (getdirs): Use glob -nocomplain rather than glob
	and catching the "no files matched glob pattern" error
	message. Catching the error message was the wrong thing to do
	because the foreach loop then iterates over each word in the error
	message as if they were matches.

2018-12-10  Ben Elliston  <bje@gnu.org>

	* testsuite/runtest.all/utils.test (getdirs): Add a test for the
	non-existent directory case.

2018-12-10  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Remove unnecessary quotes and braces around
	variable expansions.

	* lib/debugger.exp (dumpvars): Remove unnecessary braces.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* runtest.exp (setup_target_hook): Use 'ne' and not '!='.
	(iterate_target_variants_two): Likewise.
	* lib/remote.exp (standard_download): Use 'eq' not '=='.
	(remote_upload): Likewise.
	* lib/framework.exp (open_logs): Likewise.
	(is_remote): Likewise.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* baseboards/basic-sid.exp, baseboards/basic-sim.exp,
	baseboards/i386-sid.exp, baseboards/mt-sid.exp,
	baseboards/sh-sid.exp, config/adb.exp, config/gdb-comm.exp,
	config/gdb_stub.exp, config/sim.exp, config/unix.exp,
	config/vxworks.exp, lib/dejagnu.exp, lib/dg.exp,
	lib/framework.exp, lib/kermit.exp, lib/libgloss.exp,
	lib/remote.exp, lib/rsh.exp, lib/target.exp, lib/tip.exp,
	lib/utils.exp, testsuite/lib/libsup.exp,
	testsuite/runtest.all/options.exp,: Remove unnecessary braces
	around variable expansions.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* lib/debugger.exp, lib/dg.exp, lib/framework.exp, lib/ftp.exp,
	lib/kermit.exp, lib/libgloss.exp, lib/remote.exp, lib/rlogin.exp,
	lib/target.exp, lib/tip.exp, lib/utils.exp, runtest.exp: Remove
	unnecessary quotes and braces around variable expansions.

2018-12-09  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp: Remove unnecessary quotes.
	* config/gdb_stub.exp: Likewise.
	* config/vxworks.exp: Likewise.
	* config/unix.exp: Likewise.